<resources>
    <string name="app_name">FPV Drone</string>
    <string name="hint_ip">Enter IP Address</string>
    <string name="hint_port">Enter Port Number</string>
    <string name="connect_button">Connect</string>
    <string name="start_button">Start</string>
    <string name="not_connected">not connected</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="ss_button">Screenshot</string>
</resources>
